--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <main>
   <app-livro-inserir></app-livro-inserir>
   <app-livro-lista></app-livro-lista>
+  <router-outlet></router-outlet>
 </main>
